# interaction-inference

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_notebook.ipynb
src/interaction_inference/: __init__.py  analysis.py  bootstrap.py  constraints.py  correlation.py  dataset.py  hypothesis.py  minimization.py  optimization.py  performance.py  results.py  simulation.py  truncation.py
src/interaction_inference/Legacy/: minimization.py  truncation_old.py
